构建堆外内存读写